@startuml
skinparam classAttributeIconSize 0

class QueryController
class SessionController

class QueryOrchestrator
class AISummarizer
class WikipediaApiClient
class SqliteSessionRepository
class SqliteVectorStore
class WikipediaIngestionService
class RagRetrievalService
class GraphBuilderService

interface IWikiClient
interface ISessionRepository
interface IVectorStore
interface IRagRetrievalService
interface IWikipediaIngestionService

IWikiClient <|.. WikipediaApiClient
ISessionRepository <|.. SqliteSessionRepository
IVectorStore <|.. SqliteVectorStore
IRagRetrievalService <|.. RagRetrievalService
IWikipediaIngestionService <|.. WikipediaIngestionService

QueryController --> QueryOrchestrator
SessionController --> ISessionRepository

QueryOrchestrator --> IWikiClient
QueryOrchestrator --> ISessionRepository
QueryOrchestrator --> IVectorStore
QueryOrchestrator --> IRagRetrievalService
QueryOrchestrator --> IWikipediaIngestionService
QueryOrchestrator --> AISummarizer
QueryOrchestrator --> GraphBuilderService

class QueryRequest
class QueryResponse
QueryController ..> QueryRequest
QueryController ..> QueryResponse

@enduml
